--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
   }
 }
